--- a/css/styles.css
+++ b/css/styles.css
@@ -20,11 +20,15 @@ body {
   text-align: center; }
 .nav li:hover {
   background: #555; }
-.nav li a {
+.nav a {
   text-decoration: none;
   color: #fff; }
+.nav a:visited {
+  color: white; }
+.nav a:active {
+  color: white; }
 
-#imgEtch {
+.midEtch {
   position: absolute;
   left: 20%;
   width: 800px;
