--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -29,15 +29,19 @@ body {
     li:hover {
         background: #555;
     }
-    li {
-        a {
-            text-decoration: none;
-            color: #fff;
-        }
+    a {
+        text-decoration: none;
+        color: #fff;
+    }
+    a:visited {
+        color: white;
+    }
+    a:active {
+        color: white;
     }
 }
 
-#imgEtch {
+.midEtch {
     position: absolute;
     left: 20%;
     width: 800px;
