--- a/sass/CanvasV.scss
+++ b/sass/CanvasV.scss
@@ -3,16 +3,25 @@ $font-stack: sans-serif 20px;
     background: white;
 }
 
-#ColiDiv {
+#Cols {
     position: absolute;
-    left: 21.8%;
+    left: 24.8%;
+    width: 23.1%;
+}
+
+#Size {
+    position: absolute;
+    left: 74.4%;
+    width: 23.9%;
+}
+
+.dropList {
     padding: 10px;
-    width: 20.1%;
     background: #444;
     z-index: 999;
 }
 
-#ColiDiv a {
+.dropList a {
     padding: 10px;
     text-align: center;
     display: block;
@@ -30,6 +39,6 @@ $font-stack: sans-serif 20px;
     overflow: hidden;
 }
 
-#ColiDiv a:hover {
+.dropList a:hover {
     background: #666;
 }
